Restructure content using sidebar topics

--- a/src/content/docs/basics/configuration.mdx
+++ b/src/content/docs/basics/configuration.mdx
@@ -2,7 +2,7 @@
 title: Configuration
 description: A reference page in my new Starlight docs site.
 sidebar:
-  order: 4
+  label: Overview
 ---
 import FileTree from '~/components/FileTree.astro';
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
