--- a/src/content/docs/editor-setup.mdx
+++ b/src/content/docs/editor-setup.mdx
@@ -1,6 +1,8 @@
 ---
 title: Editor Setup
 description: A reference page in my new Starlight docs site.
+sidebar:
+  label: Editor setup
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
