--- a/src/content/docs/guides/analytics/cabin-analytics.mdx
+++ b/src/content/docs/guides/analytics/cabin-analytics.mdx
@@ -4,6 +4,8 @@ description: How to add ananlytics to your Thulite site using Cabin Analytics.
 type: analytics
 stub: false
 service: Cabin
+sidebar:
+  label: Cabin
 ---
 import List from '~/components/List.astro';
 
