--- a/src/content/docs/guides/analytics/fathom-analytics.mdx
+++ b/src/content/docs/guides/analytics/fathom-analytics.mdx
@@ -4,6 +4,8 @@ description: How to add ananlytics to your Thulite site using Fathom Analytics.
 type: analytics
 stub: false
 service: Fathom
+sidebar:
+  label: Fathom
 ---
 import List from '~/components/List.astro';
 
