--- a/src/content/docs/guides/analytics/google-analytics.mdx
+++ b/src/content/docs/guides/analytics/google-analytics.mdx
@@ -4,6 +4,8 @@ description: How to add ananlytics to your Thulite site using Google Analytics.
 type: analytics
 stub: false
 service: Google Analytics
+sidebar:
+  label: Google Analytics
 ---
 import List from '~/components/List.astro';
 
