--- a/src/content/docs/guides/analytics/plausible-analytics.mdx
+++ b/src/content/docs/guides/analytics/plausible-analytics.mdx
@@ -4,6 +4,8 @@ description: How to add ananlytics to your Thulite site using Plausible Analytic
 type: analytics
 stub: false
 service: Plausible
+sidebar:
+  label: Plausible
 ---
 import List from '~/components/List.astro';
 
