--- a/src/content/docs/guides/cms/cloudcannon.mdx
+++ b/src/content/docs/guides/cms/cloudcannon.mdx
@@ -4,6 +4,8 @@ description: Add content to your Thulite project using CloudCannon as a CMS
 type: cms
 stub: false
 service: CloudCannon
+sidebar:
+  label: CloudCannon
 ---
 import List from '~/components/List.astro';
 
