--- a/src/content/docs/guides/cms/overview.mdx
+++ b/src/content/docs/guides/cms/overview.mdx
@@ -1,6 +1,9 @@
 ---
 title: Use a CMS with Thulite
 description: How to use a CMS to add content to Thulite
+sidebar:
+  label: Overview
+  order: 0
 ---
 import CMSGuidesNav from '~/components/CMSGuidesNav.astro';
 import List from '~/components/List.astro';
