--- a/src/content/docs/guides/cms/tina-cms.mdx
+++ b/src/content/docs/guides/cms/tina-cms.mdx
@@ -4,6 +4,8 @@ description: Add content to your Thulite project using Tina as a CMS
 type: cms
 stub: false
 service: Tina CMS
+sidebar:
+  label: Tina CMS
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import List from '~/components/List.astro';
