--- a/src/content/docs/guides/deploy/cloudflare.mdx
+++ b/src/content/docs/guides/deploy/cloudflare.mdx
@@ -4,6 +4,8 @@ description: How to deploy your Thulite site to the web using Cloudflare Pages.
 type: deploy
 stub: false
 service: Cloudflare Pages
+sidebar:
+  label: Cloudflare
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
