--- a/src/content/docs/guides/deploy/gitlab.mdx
+++ b/src/content/docs/guides/deploy/gitlab.mdx
@@ -4,6 +4,8 @@ description: How to deploy your Thulite site to the web using GitLab Pages.
 type: deploy
 stub: false
 service: GitLab Pages
+sidebar:
+  label: GitLab Pages
 ---
 
 You can use [GitLab Pages](https://pages.gitlab.io/) to host a Thulite site for your [GitLab](https://about.gitlab.com/) projects, groups, or user account.
