--- a/src/content/docs/guides/deploy/google-firebase.mdx
+++ b/src/content/docs/guides/deploy/google-firebase.mdx
@@ -4,6 +4,8 @@ description: How to deploy your Thulite site to the web using Google's Firebase 
 type: deploy
 stub: false
 service: Firebase Hosting
+sidebar:
+  label: Google Firebase
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
