--- a/src/content/docs/guides/deploy/microsoft-azure.mdx
+++ b/src/content/docs/guides/deploy/microsoft-azure.mdx
@@ -4,6 +4,8 @@ description: How to deploy your Thulite site to the web using Microsoft Azure.
 type: deploy
 stub: false
 service: Microsoft Azure
+sidebar:
+  label: Microsoft Azure
 ---
 
 [Azure](https://azure.microsoft.com/) is a cloud platform from Microsoft. You can deploy your Thulite site with Microsoft Azure's [Static Web Apps](https://aka.ms/staticwebapps) service.
