--- a/src/content/docs/guides/deploy/netlify.mdx
+++ b/src/content/docs/guides/deploy/netlify.mdx
@@ -4,6 +4,8 @@ description: How to deploy your Thulite site to the web on Netlify.
 type: deploy
 stub: false
 service: Netlify
+sidebar:
+  label: Netlify
 ---
 import List from '~/components/List.astro';
 
