--- a/src/content/docs/guides/deploy/overview.mdx
+++ b/src/content/docs/guides/deploy/overview.mdx
@@ -1,6 +1,9 @@
 ---
 title: Deploy your Thulite site
 description: A guide in my new Starlight docs site.
+sidebar:
+  label: Overview
+  order: 0
 ---
 import DeployGuidesNav from '~/components/DeployGuidesNav.astro';
 import { Tabs, TabItem } from '@astrojs/starlight/components';
