--- a/src/content/docs/guides/deploy/render.mdx
+++ b/src/content/docs/guides/deploy/render.mdx
@@ -4,6 +4,8 @@ description: How to deploy your Thulite site to the web using Render.
 type: deploy
 stub: false
 service: Render
+sidebar:
+  label: Render
 ---
 
 You can deploy your Thulite project to [Render](https://render.com/), a service to build websites with free TLS certificates, a global CDN, DDoS protection, private networks, and auto deploys from Git.
