--- a/src/content/docs/guides/deploy/vercel.mdx
+++ b/src/content/docs/guides/deploy/vercel.mdx
@@ -4,6 +4,8 @@ description: How to deploy your Thulite site to the web on Vercel.
 type: deploy
 stub: false
 service: Vercel
+sidebar:
+  label: Vercel
 ---
 import List from '~/components/List.astro';
 
