--- a/src/content/docs/guides/integrations/bootstrap.mdx
+++ b/src/content/docs/guides/integrations/bootstrap.mdx
@@ -6,6 +6,8 @@ type: integration
 stub: false
 service: "Bootstrap"
 category: renderer
+sidebar:
+  label: Bootstrap
 ---
 import { LinkCard } from '@astrojs/starlight/components';
 
