--- a/src/content/docs/guides/integrations/images.mdx
+++ b/src/content/docs/guides/integrations/images.mdx
@@ -5,6 +5,8 @@ type: integration
 stub: false
 service: "Images"
 category: other
+sidebar:
+  label: Images
 ---
 import List from '~/components/List.astro';
 
