--- a/src/content/docs/guides/integrations/inline-svg.mdx
+++ b/src/content/docs/guides/integrations/inline-svg.mdx
@@ -5,6 +5,8 @@ type: integration
 stub: false
 service: "Inline SVG"
 category: other
+sidebar:
+  label: Inline SVG
 ---
 import List from '~/components/List.astro';
 
