--- a/src/content/docs/guides/integrations/seo.mdx
+++ b/src/content/docs/guides/integrations/seo.mdx
@@ -5,6 +5,8 @@ type: integration
 stub: false
 service: "SEO"
 category: other
+sidebar:
+  label: SEO
 ---
 import List from '~/components/List.astro';
 
