--- a/src/content/docs/guides/integrations/tailwind.mdx
+++ b/src/content/docs/guides/integrations/tailwind.mdx
@@ -5,6 +5,8 @@ type: integration
 stub: false
 service: "Tailwind CSS"
 category: renderer
+sidebar:
+  label: Tailwind CSS
 ---
 
 Tailwind CSS integration for Thulite.
