--- a/src/content/docs/guides/upgrade-to/v2.mdx
+++ b/src/content/docs/guides/upgrade-to/v2.mdx
@@ -1,6 +1,8 @@
 ---
 title: Upgrade to Thulite v2
 description: A guide in my new Starlight docs site.
+sidebar:
+  label: v2.0
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
