--- a/src/content/docs/basics/project-structure.mdx
+++ b/src/content/docs/basics/project-structure.mdx
@@ -1,5 +1,5 @@
 ---
-title: Project Structure
+title: Project structure
 description: A reference page in my new Starlight docs site.
 sidebar:
   order: 0
@@ -72,9 +72,9 @@ The `content/` directory is where you store [pages](/basics/pages/), organized i
 
 ### `static/`
 
-The `static/` directory is for files and assets that do not need to be processed during Thulite' build process. These files will be copied into the build folder untouched.
+The `static/` directory is for files and assets that do not need to be processed during Hugo's build process. The files in this folder will be copied into the build folder untouched, and then your site will be built.
 
-This behavior makes `static/` ideal for common assets like images and fonts, or special files such as `robots.txt` and `manifest.webmanifest`.
+This behavior makes `static/` ideal for common assets  that do not require any processing, like some images and fonts, or special files such as `robots.txt` and `manifest.webmanifest`.
 
 You can place CSS and JavaScript in your `static/` directory, but be aware that those files will not be bundled or optimized in your final build.
 
@@ -82,11 +82,10 @@ You can place CSS and JavaScript in your `static/` directory, but be aware that 
 As a general rule, any CSS or JavaScript that you write yourself should live in your `assets/` directory.
 :::
 
-
 ### `package.json`
 
 This is a file used by JavaScript package managers to manage your dependencies. It also defines the scripts that are commonly used to run Thulite (ex: `npm run dev`, `npm run build`).
 
 There are [two kinds of dependencies](https://docs.npmjs.com/specifying-dependencies-and-devdependencies-in-a-package-json-file) you can specify in a `package.json`: `dependencies` and `devDependencies`. In most cases, these work the same: Thulite needs all dependencies at build time, and your package manager will install both. We recommend putting all of your dependencies in `dependencies` to start, and only use `devDependencies` if you find a specific need to do so.
 
-For help creating a new `package.json` file for your project, check out the [manual setup](/install/manual/) instructions.
+For help creating a new `package.json` file for your project, check out the [manual setup](/install-and-setup#manual-setup) instructions.
