--- a/src/content/docs/guides/analytics/overview.mdx
+++ b/src/content/docs/guides/analytics/overview.mdx
@@ -1,6 +1,9 @@
 ---
 title: Add Analytics to Thulite
 description: A guide in my new Starlight docs site.
+sidebar:
+  label: Overview
+  order: 0
 ---
 import AnalyticsGuidesNav from '~/components/AnalyticsGuidesNav.astro';
 
