--- a/src/content/docs/guides/cms/decap-cms.mdx
+++ b/src/content/docs/guides/cms/decap-cms.mdx
@@ -4,6 +4,8 @@ description: Add content to your Thulite project using Decap as a CMS
 type: cms
 stub: true
 service: Decap CMS
+sidebar:
+  label: Decap CMS
 ---
 import List from '~/components/List.astro';
 
