--- a/src/content/docs/guides/deploy/github.mdx
+++ b/src/content/docs/guides/deploy/github.mdx
@@ -4,6 +4,8 @@ description: How to deploy your Thulite site to the web using GitHub Pages.
 type: deploy
 stub: false
 service: GitHub Pages
+sidebar:
+  label: GitHub Pages
 ---
 
 You can use [GitHub Pages](https://pages.github.com/) to host a Thulite website directly from a repository on [GitHub.com](https://github.com/).
