--- a/src/content/docs/guides/integrations/bolt-core.mdx
+++ b/src/content/docs/guides/integrations/bolt-core.mdx
@@ -3,8 +3,10 @@ title: "@thulite/bolt-core"
 description: Core integration for the Bolt theme
 type: integration
 stub: false
-service: "Bolt Core"
+service: "Bolt core"
 category: theme
+sidebar:
+  label: Bolt core
 ---
 
 Core integration for the Bolt theme.
