--- a/src/content/docs/guides/integrations/doks-core.mdx
+++ b/src/content/docs/guides/integrations/doks-core.mdx
@@ -3,8 +3,10 @@ title: "@thulite/doks-core"
 description: Core integration for the Doks theme
 type: integration
 stub: false
-service: "Doks Core"
+service: "Doks core"
 category: theme
+sidebar:
+  label: Doks core
 ---
 
 Core integration for the Doks theme.
