--- a/src/content/docs/guides/themes/overview.mdx
+++ b/src/content/docs/guides/themes/overview.mdx
@@ -1,11 +1,15 @@
 ---
-title: Markdown
+title: Add a theme to  Thulite
 description: A guide in my new Starlight docs site.
+sidebar:
+  label: Overview
+  order: 0
 ---
+import ThemesGuidesNav from '~/components/ThemesGuidesNav.astro';
 
 Guides lead a user through a specific task they want to accomplish, often with a sequence of steps.
 Writing a good guide requires thinking about what your users are trying to do.
 
-## Further reading
+## Official Themes
 
-- Read [about how-to guides](https://diataxis.fr/how-to-guides/) in the Diátaxis framework
+<ThemesGuidesNav />
