--- a/src/content/docs/upgrade-thulite.mdx
+++ b/src/content/docs/upgrade-thulite.mdx
@@ -1,6 +1,8 @@
 ---
 title: Upgrade Thulite
 description: A guide in my new Starlight docs site.
+sidebar:
+  label: Overview
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
