Fix link to Installation guide

--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -35,7 +35,7 @@ bun create thulite@latest
   </TabItem>
 </Tabs>
 
-Our [Installation Guide](/install/auto/) has step-by-step instructions for installing Thulite using our CLI wizard, creating a new project from an existing Thulite GitHub repository, and for installing Thulite manually.
+Our [Installation Guide](/install-and-setup/) has step-by-step instructions for installing Thulite using our CLI wizard, creating a new project from an existing Thulite GitHub repository, and for installing Thulite manually.
 
 {/*
 ## Quick Try
