Update guides start topic

--- a/src/content/docs/install-and-setup.mdx
+++ b/src/content/docs/install-and-setup.mdx
@@ -1,6 +1,6 @@
 ---
 title: Install Thulite
-description: A reference page in my new Starlight docs site.
+description: How to install Thulite and start a new project.
 sidebar:
   label: Installation
 ---
