--- a/src/content/docs/reference/cli-commands.mdx
+++ b/src/content/docs/reference/cli-commands.mdx
@@ -1,8 +1,6 @@
 ---
-title: Commands
+title: CLI commands
 description: A reference page in my new Starlight docs site.
-sidebar:
-  label: Workflow
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
