--- a/src/content/docs/basics/project-structure.mdx
+++ b/src/content/docs/basics/project-structure.mdx
@@ -1,8 +1,6 @@
 ---
 title: Project structure
-description: A reference page in my new Starlight docs site.
-sidebar:
-  order: 0
+description: An introduction to the basic file structure of a Thulite project.
 ---
 import FileTree from '~/components/FileTree.astro';
 
