Update manual setup Install Thulite guide

--- a/src/content/docs/install-and-setup.mdx
+++ b/src/content/docs/install-and-setup.mdx
@@ -86,7 +86,7 @@ You can run `create thulite` anywhere on your machine, so there's no need to cre
       </TabItem>
     </Tabs>
 
-4. You can now [start the Hugo dev server](/basics/commands#dev) and see a live preview of your project while you build!
+4. You can now [start the Hugo dev server](/develop-and-build/#start-the-hugo-dev-server) and see a live preview of your project while you build!
 
 </Steps>
 
@@ -393,11 +393,11 @@ If you prefer not to use our automatic `create thulite` CLI tool, you can set up
     enableGitInfo = false
     enableRobotsTXT = true
     languageCode = "en-US"
-    paginate = 7
+    pagerSize = 7
     rssLimit = 10
     summarylength = 20 # 70 (default)
 
-    copyRight = "Copyright (c) 2020-2024 Thulite"
+    copyRight = "Copyright (c) 2020-2025 Thulite"
 
     [build.buildStats]
       enable = true
@@ -624,6 +624,6 @@ If you prefer not to use our automatic `create thulite` CLI tool, you can set up
 
     </FileTree>
 
-8. You can now [start the Hugo dev server](/basics/commands#dev) and see a live preview of your project while you build!
+8. You can now [start the Hugo dev server](/develop-and-build/#start-the-hugo-dev-server) and see a live preview of your project while you build!
 
 </Steps>
